--- a/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3947,26 +3947,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Throwables/SmokeGrenade/ConcealmentActor
-MRUItem1=/Game/TV/TVSpawnLocation
-MRUItem2=/Game/Throwables/Flashbang/FlashbangSpawnLocation
-MRUItem3=/Game/Throwables/SmokeGrenade/SmokeGrenadeSpawnLocation
-MRUItem4=/Game/Throwables/Molotov/MolotovSpawnLocation
-MRUItem5=/Game/Throwables/Flare/FlareSpawnLocation
-MRUItem6=/Game/Power/PowerSpawnLocation
-MRUItem7=/Game/Plunderer/LootSpawnLocation
-MRUItem8=/Game/Oddball/OddballSpawnLocation
-MRUItem9=/Game/Lights/LightSpawnLocation
-MRUItem10=/Game/Keycard/KeycardSpawnLocation
-MRUItem11=/Game/EscapeDoor/DefaultEscapeDoorSpawnLocation
-MRUItem12=/Game/Gramophone/GramophoneSpawnLocation
-MRUItem13=/Game/Fire/FireSpawnLocation
-MRUItem14=/Game/Fire/DefaultFireSpawnLocation
-MRUItem15=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
-MRUItem16=/Game/EscapeDoor/EscapeDoorSpawnLocation
-MRUItem17=/Game/CameraSystem/DefaultCameraDisplayWidget
-MRUItem18=/Game/CameraSystem/CameraSystemSpawnLocation_Child
-MRUItem19=/Game/CameraSystem/CameraDisplayWidget
+MRUItem0=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem1=/Game/Throwables/SmokeGrenade/ConcealmentActor
+MRUItem2=/Game/TV/TVSpawnLocation
+MRUItem3=/Game/Throwables/Flashbang/FlashbangSpawnLocation
+MRUItem4=/Game/Throwables/SmokeGrenade/SmokeGrenadeSpawnLocation
+MRUItem5=/Game/Throwables/Molotov/MolotovSpawnLocation
+MRUItem6=/Game/Throwables/Flare/FlareSpawnLocation
+MRUItem7=/Game/Power/PowerSpawnLocation
+MRUItem8=/Game/Plunderer/LootSpawnLocation
+MRUItem9=/Game/Oddball/OddballSpawnLocation
+MRUItem10=/Game/Lights/LightSpawnLocation
+MRUItem11=/Game/Keycard/KeycardSpawnLocation
+MRUItem12=/Game/EscapeDoor/DefaultEscapeDoorSpawnLocation
+MRUItem13=/Game/Gramophone/GramophoneSpawnLocation
+MRUItem14=/Game/Fire/FireSpawnLocation
+MRUItem15=/Game/Fire/DefaultFireSpawnLocation
+MRUItem16=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
+MRUItem17=/Game/EscapeDoor/EscapeDoorSpawnLocation
+MRUItem18=/Game/CameraSystem/DefaultCameraDisplayWidget
+MRUItem19=/Game/CameraSystem/CameraSystemSpawnLocation_Child
 
 [AssetEditorToolkitTabLocation]
 /TestMod/TestModCharacter.TestModCharacter=1
@@ -4568,7 +4568,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 TestMonsterCharacter_C=
 MonsterCharacter_C=
 Character=
