--- a/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -3952,26 +3952,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Human/Human
-MRUItem1=/Game/Monsters/Monster
-MRUItem2=/Game/Monsters/Dummy/Animations/DummyImposter_ABP
-MRUItem3=/Game/Monsters/Dummy/Animations/DummyCrouching_BS
-MRUItem4=/Game/Monsters/Dummy/Animations/Crouched_Walking_Backwards
-MRUItem5=/Game/Gramophone/GramophoneSpawnLocation
-MRUItem6=/Game/TV/TVSpawnLocation
-MRUItem7=/Game/Throwables/ThrowableSpawnLocation
-MRUItem8=/Game/Power/PowerSpawnLocation
-MRUItem9=/Game/Oddball/OddballSpawnLocation
-MRUItem10=/Game/Lights/LightSpawnLocation
-MRUItem11=/Game/Fire/FireSpawnLocation
-MRUItem12=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
-MRUItem13=/Game/EscapeDoor/EscapeDoorSpawnLocation
-MRUItem14=/Game/CameraSystem/CameraSystemSpawnLocation
-MRUItem15=/Game/CameraSystem/CameraActorSpawnLocation
-MRUItem16=/Game/Maps/ExampleMap/HighresScreenshot00001
-MRUItem17=/Game/Maps/ExampleMap/ExampleMap
-MRUItem18=/ExampleMap/ExampleMapLoadingScreenActor
-MRUItem19=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem0=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem1=/Game/Human/Human
+MRUItem2=/Game/Monsters/Monster
+MRUItem3=/Game/Monsters/Dummy/Animations/DummyImposter_ABP
+MRUItem4=/Game/Monsters/Dummy/Animations/DummyCrouching_BS
+MRUItem5=/Game/Monsters/Dummy/Animations/Crouched_Walking_Backwards
+MRUItem6=/Game/Gramophone/GramophoneSpawnLocation
+MRUItem7=/Game/TV/TVSpawnLocation
+MRUItem8=/Game/Throwables/ThrowableSpawnLocation
+MRUItem9=/Game/Power/PowerSpawnLocation
+MRUItem10=/Game/Oddball/OddballSpawnLocation
+MRUItem11=/Game/Lights/LightSpawnLocation
+MRUItem12=/Game/Fire/FireSpawnLocation
+MRUItem13=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
+MRUItem14=/Game/EscapeDoor/EscapeDoorSpawnLocation
+MRUItem15=/Game/CameraSystem/CameraSystemSpawnLocation
+MRUItem16=/Game/CameraSystem/CameraActorSpawnLocation
+MRUItem17=/Game/Maps/ExampleMap/HighresScreenshot00001
+MRUItem18=/Game/Maps/ExampleMap/ExampleMap
+MRUItem19=/ExampleMap/ExampleMapLoadingScreenActor
 
 [AssetEditorToolkitTabLocation]
 /TestMod/TestModCharacter.TestModCharacter=1
@@ -4577,7 +4577,7 @@ TimelineEnabledSnaps=MontageSection
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
 TestMonsterCharacter_C=
 MonsterCharacter_C=
 Character="\"Object.SimulatePhysicsBones\" "
@@ -4594,7 +4594,7 @@ KillHuman_AnimNotify_C="\"Object.NotifyColor\" "
 EndAttack_AnimNotify_2_C="\"Object.NotifyColor\" "
 EndAttack_AnimNotify_C="\"Object.NotifyColor\" "
 Adam_ABP_C=
-AnimInstance="\"Object.IsCrouching\" "
+AnimInstance=
 MasterChief_ABP_C=
 AnimSequence="\"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
 AnimSequenceBase="\"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
