--- a/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ GridEnabled=False
 CameraSpeed=3
 
 [EditorStartup]
-LastLevel=/Game/StarterContent/Maps/Minimal_Default
+LastLevel=/Game/Maps/ExampleMap/ExampleMap
 
 [ModuleFileTracking]
 HorrorRoyale.TimeStamp=2025.10.14-00.41.43
@@ -1062,7 +1062,7 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [Directories2]
-UNR=../../../Projects/HorrorRoyale/Content/StarterContent/Maps
+UNR=../../../Projects/HorrorRoyale/Content/Maps/ExampleMap
 BRUSH=../../../Projects/HorrorRoyale/Content/
 FBX=../../../Projects/HorrorRoyale/Content/
 FBXAnim=../../../Projects/HorrorRoyale/Content/
@@ -3952,26 +3952,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Human/Characters/Adam/Animations/Adam_ABP
-MRUItem1=/Game/Human/Human
-MRUItem2=/Game/Monsters/Monster
-MRUItem3=/Game/Monsters/Dummy/Animations/DummyImposter_ABP
-MRUItem4=/Game/Monsters/Dummy/Animations/DummyCrouching_BS
-MRUItem5=/Game/Monsters/Dummy/Animations/Crouched_Walking_Backwards
-MRUItem6=/Game/Gramophone/GramophoneSpawnLocation
-MRUItem7=/Game/TV/TVSpawnLocation
-MRUItem8=/Game/Throwables/ThrowableSpawnLocation
-MRUItem9=/Game/Power/PowerSpawnLocation
-MRUItem10=/Game/Oddball/OddballSpawnLocation
-MRUItem11=/Game/Lights/LightSpawnLocation
-MRUItem12=/Game/Fire/FireSpawnLocation
-MRUItem13=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
-MRUItem14=/Game/EscapeDoor/EscapeDoorSpawnLocation
-MRUItem15=/Game/CameraSystem/CameraSystemSpawnLocation
-MRUItem16=/Game/CameraSystem/CameraActorSpawnLocation
-MRUItem17=/Game/Maps/ExampleMap/HighresScreenshot00001
-MRUItem18=/Game/Maps/ExampleMap/ExampleMap
-MRUItem19=/ExampleMap/ExampleMapLoadingScreenActor
+MRUItem0=/Game/LevelObjects/MapInformationActor
+MRUItem1=/Game/Maps/ExampleMap/ExampleMap
+MRUItem2=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem3=/Game/Human/Human
+MRUItem4=/Game/Monsters/Monster
+MRUItem5=/Game/Monsters/Dummy/Animations/DummyImposter_ABP
+MRUItem6=/Game/Monsters/Dummy/Animations/DummyCrouching_BS
+MRUItem7=/Game/Monsters/Dummy/Animations/Crouched_Walking_Backwards
+MRUItem8=/Game/Gramophone/GramophoneSpawnLocation
+MRUItem9=/Game/TV/TVSpawnLocation
+MRUItem10=/Game/Throwables/ThrowableSpawnLocation
+MRUItem11=/Game/Power/PowerSpawnLocation
+MRUItem12=/Game/Oddball/OddballSpawnLocation
+MRUItem13=/Game/Lights/LightSpawnLocation
+MRUItem14=/Game/Fire/FireSpawnLocation
+MRUItem15=/Game/EscapeDoor/ExitSign/ExitSignSpawnLocation
+MRUItem16=/Game/EscapeDoor/EscapeDoorSpawnLocation
+MRUItem17=/Game/CameraSystem/CameraSystemSpawnLocation
+MRUItem18=/Game/CameraSystem/CameraActorSpawnLocation
+MRUItem19=/Game/Maps/ExampleMap/HighresScreenshot00001
 
 [AssetEditorToolkitTabLocation]
 /TestMod/TestModCharacter.TestModCharacter=1
@@ -4534,8 +4534,8 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [MRU]
-MRUItem0=/Game/StarterContent/Maps/Minimal_Default
-MRUItem1=/Game/Maps/ExampleMap/ExampleMap
+MRUItem0=/Game/Maps/ExampleMap/ExampleMap
+MRUItem1=/Game/StarterContent/Maps/Minimal_Default
 MRUItem2=/ExampleMap/ExampleMap
 MRUItem3=/ModdedMap/ModdedMap
 MRUItem4=/BestMap/BestMap
@@ -4744,7 +4744,7 @@ FireSpawnLocation_C=
 LightSpawnLocation_C=
 AlienHuman_C="\"Object.HumanOptions.FootstepSounds.FootstepSounds[0]\" \"Object.HumanOptions.VRBoneLocations\" \"Object.HumanOptions.VRBoneLocations.VRBoneLocations[0]\" \"Object.HumanOptions.VRBoneLocations.VRBoneLocations[1]\" \"Object.HumanOptions.VRBoneLocations.VRBoneLocations[2]\" \"Object.HumanOptions.VRBoneLocations.VRBoneLocations[3]\" \"Object.HumanOptions.VRBoneLocations.VRBoneLocations[4]\" \"Object.HumanOptions.SimulatePhysicsBones\" "
 AlienHuman_ABP_C="\"Object.RightMotionControllerPosition\" "
-MapInformationActor_C="\"Object.InteractableDoorLocation\" "
+MapInformationActor_C="\"Object.HumansAlive\" "
 InformationActorWidget_C="\"Object.HumanWithMostPoints\" "
 ExampleMapLoadingScreenActor_C="\"Object.Default.LoadingScreens\" "
 ModdedLoadingScreenActor_C="\"Object.Default.LoadingScreens\" "
@@ -5155,6 +5155,7 @@ NewPluginDescriptorData.Descriptor Data=True
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+QualityLevel=3
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
