--- a/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HorrorRoyale/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,7 +130,7 @@ GridEnabled=False
 CameraSpeed=3
 
 [EditorStartup]
-LastLevel=/Game/Maps/ExampleMap/ExampleMap
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [ModuleFileTracking]
 HorrorRoyale.TimeStamp=2025.10.14-00.41.43
@@ -3952,9 +3952,9 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LevelObjects/MapInformationActor
-MRUItem1=/Game/Maps/ExampleMap/ExampleMap
-MRUItem2=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem0=/Game/Human/Characters/Adam/Animations/Adam_ABP
+MRUItem1=/Game/LevelObjects/MapInformationActor
+MRUItem2=/Game/Maps/ExampleMap/ExampleMap
 MRUItem3=/Game/Human/Human
 MRUItem4=/Game/Monsters/Monster
 MRUItem5=/Game/Monsters/Dummy/Animations/DummyImposter_ABP
@@ -4580,12 +4580,12 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Object="\"Object.SkeletalMeshes\" "
 TestMonsterCharacter_C=
 MonsterCharacter_C=
-Character="\"Object.SimulatePhysicsBones\" "
-Pawn="\"Object.SimulatePhysicsBones\" "
+Character="\"Object.NeckRotation\" "
+Pawn="\"Object.NeckRotation\" "
 MonsterRightFootstep_AnimNotify_C="\"Object.NotifyColor\" "
 AnimNotify="\"Object.NotifyColor\" "
 MonsterLeftFootstep_AnimNotify_C="\"Object.NotifyColor\" "
-Monster_C="\"Object.SimulatePhysicsBones\" "
+Monster_C="\"Object.NeckRotation\" "
 SpringtrapMonster_C=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
